fixed alignment of videos on page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,9 @@ a {
 }
 
 .container {
-	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 940px;
 }
 
 #bottom_border {
@@ -72,6 +74,12 @@ div.ttip {
 	-moz-transition: all .2s ease-in-out;
 	-o-transition: all .2s ease-in-out;
 	-webkit-transition: all .2s ease-in-out;
+}
+
+
+#videos {
+	padding-top: 45px;
+	text-align: center;
 }
 
 .bigger:hover + div.ttip {
